@@ -1,4 +1,8 @@
-﻿drkns 21.02.2015 09:54:33 +0200 - build 4275
+﻿drkns 21.02.2015 11:14:06 +0200 - build 4276
+
+1. Некорректно работало разворачивание путей вида C:path.
+
+drkns 21.02.2015 09:54:33 +0200 - build 4275
 
 1. Рефакторинг.
 
